# ScienceWork

./: .gitignore  README.md  package-lock.json  package.json  swork.js
calculator/: CMakeLists.txt  calculator.js
calculator/headers/: funcs.hpp  generator.hpp  rk4.hpp
calculator/scripts/: b.bat  b.sh  c.bat  c.sh  cc.bat  cc.sh  r.bat  r.sh
calculator/sources/: generator.cpp  main.cpp  rk4.cpp
form/: generators.js  page.css  page.js  page.pug
methods/: core.js  rk4.js
